--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   eva_icons_flutter: ^2.0.1
   carousel_slider: ^2.2.1
   timeago: ^2.0.26
+  flutter_screenutil: ^4.0.3+1
 
 dev_dependencies:
   flutter_test:
