--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,20 @@ dependencies:
   timeago: ^2.0.26
   webview_flutter: ^0.3.22+1
   dio_http_cache: ^0.2.7
-
+  introduction_screen: ^1.0.5+2
+  flutter_svg: ^0.19.0
+  cached_network_image: ^2.3.3
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
   intl: ^0.16.1
+  flutter_launcher_icons: ^0.7.3
+
+flutter_icons:
+  android: "launcher_icon" 
+  ios: true
+  image_path: "assets/images/news.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -54,6 +63,8 @@ flutter:
   assets:
     - assets/images/
     - assets/logos/
+    - assets/vector/
+    - assets/screenshots/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
